# androidworkspace

JNIAddDemo/: settings.gradle.kts
JNIAddDemo/app/: build.gradle.kts
JNIAddDemo/app/src/androidTest/java/com/example/jniadddemo/: ExampleInstrumentedTest.kt
JNIAddDemo/app/src/main/: AndroidManifest.xml
JNIAddDemo/app/src/main/java/com/example/jniadddemo/: MainActivity.kt
JNIAddDemo/app/src/main/res/values/: strings.xml  themes.xml
JNIAddDemo/app/src/test/java/com/example/jniadddemo/: ExampleUnitTest.kt
JNIAddDemo/gradle/wrapper/: gradle-wrapper.properties
JNIAddSDK/: settings.gradle
JNIAddSDK/JNIAddSDK/: build.gradle
JNIAddSDK/JNIAddSDK/src/androidTest/java/com/example/jniaddsdk/: ExampleInstrumentedTest.java
JNIAddSDK/JNIAddSDK/src/main/cpp/: CMakeLists.txt
JNIAddSDK/JNIAddSDK/src/main/java/: NativeAddUtils.java
JNIAddSDK/addsdk/: build.gradle
JNIAddSDK/addsdk/src/main/cpp/: native-lib.cpp
JNIAddSDK/app/: build.gradle
JNIAddSDK/app/libs/: addsdk-debug.aar  addsdk-release.aar
JNIAddSDK/app/src/androidTest/java/com/example/jniaddsdk/: ExampleInstrumentedTest.java
JNIAddSDK/app/src/main/: AndroidManifest.xml
JNIAddSDK/app/src/main/java/com/example/jniaddsdk/: MainActivity.java
JNIAddSDK/app/src/main/res/layout/: activity_main.xml
JNIAddSDK/app/src/main/res/values/: strings.xml  themes.xml
JNIAddSDK/app/src/main/res/values-night/: themes.xml
JNIAddSDK/app/src/test/java/com/example/jniaddsdk/: ExampleUnitTest.java
JNIAddSDK/gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
